--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.15.2",
     "express-session": "^1.15.1",
     "nodemon": "^1.11.0",
-    "pug": "^2.0.0-beta11"
+    "pug": "^2.0.0-beta11",
+    "sequelize": "^3.30.2"
   }
 }
